# python-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  gunicorn.conf.py  manage.py  poetry.toml  pyproject.toml  uvicorn_worker.py
data/: 1e0e7511-9e40-4b13-8c52-4f9c26c41c55.json  906205784.json  a0ce4c08-6ca3-46f9-8c7b-253372f2cbc5.json
energy-chart/: package-lock.json  package.json
energy-chart/src/pages/: hack-energy-data.json  index.tsx
front/: package-lock.json  package.json
front/src/: App.js
front/src/components/: EnergyComparisonChart.js
front/src/services/: ApiService.js
python_challenge/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
python_challenge/api/: PythonChallenge.py  apps.py  types.py  urls.py  views.py
python_challenge/api/tests/: conftest.py  test_views.py
python_challenge/docs/: __init__.py  apps.py  tests.py  urls.py
python_challenge/types/: api.py  basic.py  enums.py  epc_enums.py  home.py  pas2035.py  recommendation_enums.py  recommendations.py  retrofit_planner.py  simulation.py  simulation_enums.py
python_challenge/types/pydantic/: fields.py
src/python_challenge/: utils.py
tests/: conftest.py
