[tool.poetry]
name = "python-challenge"
version = "0.0.0"
description = "A technical interview challenge for python developers"
authors = ["Howard Cox <dev.anubis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
